# bitsgap-test

./: .env  .gitignore  Cargo.toml  README.md  create_tables.sql  db.sqlite  init_src.sh  wget-log
src/: lib.rs  main.rs
src/aggregator/: candle_aggregator.rs  mod.rs
src/config/: settings.rs
src/database/: connection.rs  db_init.rs  mod.rs  models.rs
src/exchange/: error.rs  mod.rs
src/http_client/: error.rs  http_client.rs  mod.rs  rest_client.rs
src/parser/: kline.rs  mod.rs  recent_trade.rs
src/websocket_client/: message.rs  mod.rs  ws_client.rs
