[package]
name = "rust_kline_ws"
version = "0.1.0"
edition = "2021"

# Авторы и описание
authors = ["Arykin Valery <val12042025@gmail.com>"]
description = "Rust приложение для работы с историческими K-Line данными и WebSocket-стримом Recent Trade."
license = "MIT"
repository = "https://github.com/muzungu-av/bitsgap-test.git"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.15.6"
thiserror = "2.0.11"

[dev-dependencies]
# Для тестирования
# tokio = { version = "1.43.0", features = ["test"] }
